src/objects/SLCA2__CalendarSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>SLCA2__Calendar_Start_Day__c</fullName>
        <label>Calendar Start Day</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLCA2__CurrencyLabel__c</fullName>
        <label>CurrencyLabel</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLCA2__Time_Increment_15__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time Increment - 15</label>
        <type>Checkbox</type>
    </fields>
    <label>CalendarSettings</label>
</CustomObject>